# serverless-aws-rust-websockets

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml  serverless.yml
connections/: Cargo.toml
connections/src/: main.rs
connections/tests/data/: connect.json  disconnect.json
default/: Cargo.toml
default/src/: main.rs
send/: Cargo.toml
send/src/: main.rs
send/tests/data/: send-nothing.json  send-something.json  send.json
