[package]
name = "connections"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

[dependencies]
dynomite = "0.8"
env_logger = "0.7"
futures = "0.3"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
log = "0.4"
rusoto_apigatewaymanagementapi = "0.43"
rusoto_core = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }