[package]
name = "send"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
dynomite = "0.3"
futures = "0.1"
lambda_runtime = "0.2"
#https://github.com/rusoto/rusoto/issues/1314
#rusoto_apigatewaymanagementapi = "0.37.0"
#rusoto_core = "0.37.0"
rusoto_apigatewaymanagementapi = { git = "https://github.com/softprops/rusoto" }
rusoto_core = { git = "https://github.com/softprops/rusoto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"