[package]
name = "send"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

[dependencies]
dynomite = "0.4"
env_logger = "0.6"
futures = "0.1"
lambda_runtime = "0.2"
log = "0.4"
rusoto_apigatewaymanagementapi = "0.38"
rusoto_core = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"